# flex

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.build.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  readme.md
.claude/: settings.deny-rationale.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: builder.md  intent-reviewer.md  loop-breaker.md  reconstruction-agent.md  reviewer.md  security-auditor.md
docs/: architecture.md  brief.md  checkpoints.md  dogfood-HARNESS-002.md  fleet-snapshot.md  harness-cutover-runbook.md  ideology.md  open-patterns-review.md  phase-prompts.md  pipe-architecture.md  reconstruction.md
docs/agreements/: HARNESS001-ante1.md  HARNESS001-main.md  HARNESS002-main.md  HARNESS003-main.md  HARNESS004-main.md  HARNESS005-main.md  HARNESS006-main.md  HARNESS007-main.md  HARNESS008-main.md  HARNESS009-main.md  HARNESS010-main.md  HARNESS011-main.md  RESUME.md  era-002-closeout.md
docs/cer/: backlog.md  permission-prompt-log-2026-05.md
docs/eras/: 001-initial.md  002-flex-build-loop-and-observability.md  003-flex-orchestrator-as-harness.md  era-proposed-harness-20260624-001.md
docs/pairmode/: PAIRMODE.md  (+1 more)
hooks/: exit_plan_mode.py  hooks.json  post_tool_use.py  pre_tool_use.py  session_end.py  session_start.py  stop.py  user_prompt_submit.py
lessons/: LESSONS.md  lessons.json
scripts/: seed-context-gate.sh
tests/: simulate_planning.py  test_call_claude.py  test_extract_incremental.py  test_file_dedup.py  test_real_extraction.py  test_reconcile_sdk.py  test_sequential_hang.py
(+886 files in other folders)
