[project]
name = "flex"
version = "0.1.0"
description = "Claude Code plugin for persistent architectural memory"
readme = "readme.md"
requires-python = ">=3.11"
authors = [
    { name = "David Jacobsen", email = "david@halfhorse.com" },
]
dependencies = [
    "jinja2",
    "click",
]

[dependency-groups]
dev = [
    "pytest",
    "rich>=13.0.0",
]
