[project]
name = "flex"
version = "0.1.0"
description = "Claude Code plugin for persistent architectural memory"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "David Jacobsen", email = "david@halfhorse.com" },
]
dependencies = [
    "jinja2",
    "click",
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest",
    "rich>=13.0.0",
]
